Small Fixes: Corrected Styling and Alignment

--- a/src/app/components/education/education.scss
+++ b/src/app/components/education/education.scss
@@ -5,7 +5,6 @@
   width: 100%;
   gap: 20px;
   max-width: 500px;
-  grid-area: education;
 
   h3 {
     margin-top: 2vh;
@@ -32,5 +31,6 @@
 
   @media (min-width: 768px) {
     align-items: flex-start;
+    
   }
 }
