--- a/src/app/components/experience/experience.scss
+++ b/src/app/components/experience/experience.scss
@@ -4,7 +4,6 @@
   align-items: center;
   max-width: 500px;
   gap: 24px;
-  grid-area: experience;
 
   h3 {
     color: var(--text-primary);
@@ -21,13 +20,9 @@
 
   @media (min-width: 768px) {
     align-items: flex-start;
-
-    h3 {
-      margin: 20px 0 0 20px;
-    }
+    margin: 20px auto;
 
     p {
-      margin-left: 30px;
       font-size: 20px;
       line-height: 36px;
       width: 600px;
