--- a/src/app/components/header/header.scss
+++ b/src/app/components/header/header.scss
@@ -1,7 +1,6 @@
 .header {
   display: flex;
   flex-direction: column-reverse;
-  grid-area: header;
   gap: 24px;
   justify-content: center;
 
