--- a/src/app/components/languages/languages.scss
+++ b/src/app/components/languages/languages.scss
@@ -5,7 +5,6 @@
   width: 100%;
   gap: 20px;
   max-width: 500px;
-  grid-area: info-lang;
 
   h3 {
     margin-top: 2vh;
