--- a/src/app/components/social/social.scss
+++ b/src/app/components/social/social.scss
@@ -1,11 +1,10 @@
 .social-medias {
-  gap: 24px;
-  justify-content: center;
-  flex-direction: column;
-  grid-area: social;
   display: flex;
+  flex-direction: column;
   align-items: center;
   width: 100%;
+  gap: 20px;
+  max-width: 500px;
 
   h3 {
     margin-top: 2vh;
