--- a/src/app/styles/home.scss
+++ b/src/app/styles/home.scss
@@ -1,12 +1,4 @@
 .main-content {
-  display: grid;
-  grid-template-rows: repeat(4, auto);
-  grid-template-areas: 
-    "header"
-    "social"
-    "experience"
-    "education"
-    "info-lang";
   padding: 40px 32px;
 
   @media (min-width: 780px) {
@@ -14,7 +6,6 @@
     flex-direction: row;
     padding: 70px 60px;
     height: 100vh;
-    grid-template-rows: fit-content(100%);
     justify-content: space-between;
     align-items: flex-start;
   
